# resrun

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  restic-config.example.toml
requirements/: base.txt  dev.txt
resrun/: builder.py  config.py
tests/: conftest.py  test_builder.py
